# SearchBroV2

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  if_hyprland.txt
.continue/rules/: new-rule.md
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
src/: Actions.cpp  KIStuff.cpp  MainWindow.cpp  OutPutWindow.cpp  main.cpp
src/KI/: llm_module.py
src/ai/: Communication.cpp  Communication.hpp
src/include/: Actions.hpp  Colors.hpp  KIStuff.hpp  MainWindow.hpp  OutPutWindow.hpp
